# Inventory-Management-System

./: CMakeLists.txt  DatabaseManager.cpp  Future.txt  README.me  addProduct.cpp  addProduct.h  inventory.cpp  inventory.h  main.cpp
include/: DatabaseManager.h  addProduct.h
src/: DatabaseManager.cpp  addProduct.cpp  inventory.cpp  main.cpp
